--- a/textbook/GenomicPrediction.ipynb
+++ b/textbook/GenomicPrediction.ipynb
@@ -56,7 +56,7 @@
         "\n",
         "* Application of genomic prediction model\n",
         "\n",
-        "  * We will consider ideal genotype for grain number"
+        "  * We will consider good genotype for grain number"
       ],
       "metadata": {
         "id": "wZpUAKrgmHnm"
@@ -79,24 +79,6 @@
         "Genomic prediction is to generate prediction model that explain phenotype by genotype using big dataset.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/genomic_prediction.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
-        "\n",
-        "The process to generate genomic prediction model & check performance of the model is ...\n",
-        "\n",
-        "1. Separate all data to 80%(training data) & 20%(test data).\n",
-        "\n",
-        "2. Make prediction model using training data. (we use ElasticNet regression model in this notebook)\n",
-        "\n",
-        "3. Predict phenotype of test data **from genotype** by generated model\n",
-        "\n",
-        "4. Compare predicted phenotype & observed phenotype to check performance of the model\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/gpmethod.png?raw=true\" alt=\"colab\" height=\"400px\">\n",
-        "\n",
-        "After generating good genomic prediction model,\n",
-        "\n",
-        "we can apply the model to improve breeding strategy.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/apply_model.png?raw=true\" alt=\"colab\" height=\"600px\">\n",
         "\n"
       ],
       "metadata": {
@@ -107,7 +89,7 @@
       "cell_type": "markdown",
       "source": [
         "# Experience Genomic Prediction\n",
-        "In this notebook, we try to make genomic prediction model and apply it to the genomic breeding."
+        "In this notebook, we try to use genomic prediction model to consider good genotype for Grain number."
       ],
       "metadata": {
         "id": "Xt6EApFB9zM2"
@@ -118,7 +100,8 @@
       "source": [
         "# Prepare modules & packages\n",
         "!wget -O genomic_prediction.py https://github.com/slt666666/FAO_lecture/blob/main/genomic_prediction.py?raw=true\n",
-        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
         "from genomic_prediction import load_dataset\n",
         "from genomic_prediction import split_dataset\n",
         "from genomic_prediction import make_genomic_prediction_model\n",
@@ -140,11 +123,13 @@
       "source": [
         "## Materials\n",
         "\n",
-        "We generated NAM population by crossing rice cultivar A and 5 other cultivars (B~F).\n",
+        "We generated RIL population by crossing rice cultivar Hitomebore and rice cultivar X.\n",
+        "\n",
+        "(This is unpublished data, so I hide cultivar name.)\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/nam.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
         "\n",
-        "Then, we perform sequencing & phenotyping for this population.\n",
+        "Then, we performed NGS sequencing & phenotyping for this population.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/genopheno.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
         "\n",
@@ -152,8 +137,8 @@
         "\n",
         "The dataset contains almost 1000 lines.\n",
         "\n",
-        "- SNP genotype (0 = cultivar A, 2 = other cultivar)\n",
-        "- Phenotypes: Leaf width(LW_mean) & Grain number(GN_mean)"
+        "- SNP genotype (0 = Hitomebore genotype, 2 = Cultivar X genotype, 1 = Heterozygous)\n",
+        "- Phenotypes: Grain number (GN_mean)\n"
       ],
       "metadata": {
         "id": "KF6GfH3MNxlq"
@@ -175,15 +160,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1.Separate dataset\n",
+        "## Make Genomic prediction model\n",
         "\n",
-        "At first, we'll split all dataset to training data and test data.\n",
+        "Using genotype & phenotype dataset, we generated genomic prediction model.\n",
         "\n",
-        "* Training data(80%) ... for making prediction model.\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/gpmethod.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
         "\n",
-        "* Test data(20%) ... for checking performance of model\n",
+        "Please run the below code to make genomic prediction model!\n",
         "\n",
-        "Please run the below code to split datase !!"
+        "Below code perform all process to generate model & check accuracy."
       ],
       "metadata": {
         "id": "I3fT-bcDWsEx"
@@ -193,95 +178,18 @@
       "cell_type": "code",
       "source": [
         "test_genotype, test_phenotype, train_genotype, train_phenotype = split_dataset(genotype, phenotype, \"GN_mean\", test=0.2)\n",
-        "print(\"test data is {} lines.\".format(test_phenotype.shape[0]))\n",
-        "print(\"training data is {} lines.\".format(train_phenotype.shape[0]))"
+        "GN_prediction_model = make_genomic_prediction_model(train_genotype, train_phenotype, \"GN_mean\")\n",
+        "print(\"\\nPrediction model is ...\")\n",
+        "print(check_equation(\"GN_mean\", GN_prediction_model), \"\\n\")\n",
+        "predicted_test_phenotype = predict_phenotype(test_genotype, GN_prediction_model)\n",
+        "print(\"And the accuracy of the prediction model by test data is ...\")\n",
+        "check_accuracy(predicted_test_phenotype, test_phenotype, \"GN_mean\")"
       ],
       "metadata": {
         "id": "4v1TBnKxBkoq"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 2. Make prediction model\n",
-        "\n",
-        "After splitting dataset,\n",
-        "\n",
-        "Base on training dataset (80%), we'll make genomic prediction model that explain phenotype from genotype.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation15.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
-        "\n",
-        "Please run the below code to generate a prediction model.\n",
-        "\n",
-        "```\n",
-        "※ Memo\n",
-        "In this notebook, we used regression model (ElasticNet) to make prediction model.\n",
-        "But we skipped explanation of details of the model in this lecture because it's not statistics lecture.\n",
-        "```"
-      ],
-      "metadata": {
-        "id": "vsj2Nq48Bkxo"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "GN_prediction_model = make_genomic_prediction_model(train_genotype, train_phenotype, \"GN_mean\")\n",
-        "check_equation(\"GN_mean\", GN_prediction_model)"
-      ],
-      "metadata": {
-        "id": "14Q1rH_MBk6Z"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 3. Predict phenotype of test data\n",
-        "\n",
-        "After generating prediction model, we have to check the performance (accuracy) of the model.\n",
-        "\n",
-        "To check accuracy, we used test data that is untouched data to make model.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation16.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
-        "\n",
-        "At first, we predict phenotype values from genotype using generated model.\n",
-        "\n",
-        "Then, compare predicted values with observed values.\n",
-        "\n",
-        "If these values are very similar, the model is robust.\n",
-        "\n",
-        "Please run the below code to predict phenotype values of test data, and compare predicted values and observed values !!"
-      ],
-      "metadata": {
-        "id": "RuyDyg8ZBlCG"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "predicted_test_phenotype = predict_phenotype(test_genotype, GN_prediction_model)\n",
-        "check_accuracy(predicted_test_phenotype, test_phenotype, \"GN_mean\")"
-      ],
-      "metadata": {
-        "id": "xSCHoqKIBlKp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Above code calculate a correlation coefficient value and generate scatter plot of predicted & observed values.\n",
-        "\n",
-        "Correlation coefficient is over 0.85, so the generated model looks good."
-      ],
-      "metadata": {
-        "id": "6jRNI69HLvz7"
-      }
     },
     {
       "cell_type": "markdown",
@@ -297,7 +205,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Consider best genotype for traits\n",
+        "## Consider good genotype for traits\n",
         "\n",
         "If we can generate highly accurate genomic prediction model, we can consider what genotype is ideal for traits based on the model.\n",
         "\n",
@@ -314,11 +222,14 @@
       "source": [
         "### Make customized genotype & predict phenotype\n",
         "\n",
-        "For example, if we introgressed mutations in chromosome 1 & 5 to the cultivar A, how does phenotype change?\n",
+        "For example, if we introgressed cutivar X genotype to the Hitomebore cultivar in chromosome 1,\n",
+        "how does phenotype change?\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/pred_new.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
         "\n",
         "We can predict this phenotype by genomic prediction model.\n",
         "\n",
-        "Please run the below code to check phenotypic changes by the genotype !!"
+        "Please run the below code to check phenotype by the genotype !!"
       ],
       "metadata": {
         "id": "efOCS7T2MG8F"
@@ -327,7 +238,8 @@
     {
       "cell_type": "code",
       "source": [
-        "predict_customized_genotype(genotype, [\"chr01\", \"chr05\"], GN_prediction_model, \"GN_mean\")"
+        "change_chr = ['chr01']\n",
+        "predict_customized_genotype(genotype, change_chr, GN_prediction_model)"
       ],
       "metadata": {
         "id": "8TVxL8rMMLoJ"
@@ -338,39 +250,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Like above simulation, we can predict phenotype values of any genotypes.\n",
-        "\n",
-        "From this approach, we can identify best genotype for traits!\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation19.png?raw=true\" alt=\"colab\" height=\"200px\">"
-      ],
-      "metadata": {
-        "id": "b_02WquJhH-3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "### Play with prediction!\n",
-        "Try to find best genotype by editing chromosome genotype.\n",
+        "Try to find best genotype by editing genotype of chromosomes.\n",
         "You can edit below code & run.\n",
         "\n",
         "ex) \n",
         "\n",
         "* If you wanna change genotype of chromosome 12\n",
         "\n",
-        "`predict_customized_genotype(genotype, [\"chr12\"], GN_prediction_model, \"GN_mean\")`\n",
+        "`change_chr = ['chr12']`\n",
         "\n",
         "* If you wanna change genotype of chromosome 1, 7, and 12\n",
         "\n",
-        "`predict_customized_genotype(genotype, [\"chr01\", \"chr07\", \"chr12\"], GN_prediction_model, \"GN_mean\")`\n",
+        "`change_chr = ['chr01', 'chr07', 'chr12']`\n",
         "\n",
-        "* If you wanna change genotype of chromosome 1, 2, 3, and 4\n",
+        "* If you wanna change genotype of chromosome 1, 2, 3, 4, 5, 6, 7\n",
         "\n",
-        "`predict_customized_genotype(genotype, [\"chr01\", \"chr02\", \"chr03\", \"chr04\"], GN_prediction_model, \"GN_mean\")`\n",
-        "\n",
-        "\n",
-        "Please use below code and try to find best genotype for grain number !!!"
+        "`change_chr = ['chr01', 'chr02', 'chr03', 'chr04', 'chr05', 'chr06', 'chr07']`"
       ],
       "metadata": {
         "id": "Zp7LA-q_crpf"
@@ -379,7 +275,8 @@
     {
       "cell_type": "code",
       "source": [
-        "predict_customized_genotype(genotype, [\"chr01\", \"chr02\", \"chr03\", \"chr04\"], GN_prediction_model, \"GN_mean\")"
+        "change_chr = ['chr01', 'chr02', 'chr03', 'chr04']\n",
+        "predict_customized_genotype(genotype, change_chr, GN_prediction_model)"
       ],
       "metadata": {
         "id": "XWxT4IK0c9Zz"
@@ -394,7 +291,9 @@
         "\n",
         "But of course, we can also consider regional level/gene level.\n",
         "\n",
-        "And we should consider the aspect that what materials(cultivars/genotypes) can we use to consider ideal & feasible genotype."
+        "From this approach, we can identify best genotype for traits!\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation19.png?raw=true\" alt=\"colab\" height=\"200px\">"
       ],
       "metadata": {
         "id": "UBqYcrUFhz38"
@@ -409,13 +308,11 @@
         "---\n",
         "## Summary\n",
         "\n",
-        "In this notebook, we demonstrate **Genomic Prediction** analysis using unpublished data.\n",
+        "In this notebook, we play with **Genomic Prediction** analysis using unpublished data.\n",
         "\n",
         "You can predict phenotypes from genotype information by genomic prediction model.\n",
         "\n",
-        "Thus, you can calculate the best combination to generate new cultivars.\n",
-        "\n",
-        "Also, you can find out the ideal genotype for traits.\n",
+        "Thus, you can find out the ideal genotype for traits.\n",
         "   \n",
         "If you can generate good population which has high genetic variaty, genomic prediction approach is one of the approaches to achieve generating high-yield cultivar.\n",
         "\n"
@@ -427,7 +324,7 @@
         ""
       ],
       "metadata": {
-        "id": "K9sGe7-I3EcN"
+        "id": "qZnCziD1np5v"
       },
       "execution_count": null,
       "outputs": []
