--- a/textbook/GenomicPrediction.ipynb
+++ b/textbook/GenomicPrediction.ipynb
@@ -34,13 +34,7 @@
         "\n",
         "In this notebook, we will perform Genomic Prediction analysis using sample data.\n",
         "\n",
-        "And we will experience the application of genomic prediction model in breeding strategy\n",
-        "\n",
-        "It may help you to understand ...\n",
-        "\n",
-        "* the process of Genomic Prediction analysis\n",
-        "\n",
-        "* how to use genomic prediction model in breeding"
+        "And we will try to make good genotype for Grain number by genomic prediction model."
       ]
     },
     {
@@ -48,15 +42,13 @@
       "source": [
         "## The contents in this notebook ... \n",
         "\n",
-        "* Review of Genomic Prediction\n",
-        "\n",
-        "* Genomic prediction model using sample dataset\n",
+        "* Make Genomic prediction model using sample dataset\n",
         "\n",
         "  * We use rice population & grain number phenotype.\n",
         "\n",
         "* Application of genomic prediction model\n",
         "\n",
-        "  * We will consider good genotype for grain number"
+        "  * We will consider good genotype for grain number by prediction model"
       ],
       "metadata": {
         "id": "wZpUAKrgmHnm"
@@ -76,7 +68,7 @@
       "source": [
         "# Review of Genomic Prediction\n",
         "\n",
-        "Genomic prediction is to generate prediction model that explain phenotype by genotype using big dataset.\n",
+        "Genomic prediction model is the approach to try to predict phenotype value by genotype information.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/genomic_prediction.png?raw=true\" alt=\"colab\" height=\"300px\">\n",
         "\n"
@@ -89,7 +81,9 @@
       "cell_type": "markdown",
       "source": [
         "# Experience Genomic Prediction\n",
-        "In this notebook, we try to use genomic prediction model to consider good genotype for Grain number."
+        "In this notebook, we try to use genomic prediction model to consider good genotype for Grain number.\n",
+        "\n",
+        "!! please run the below code, this code downloads programs. !!"
       ],
       "metadata": {
         "id": "Xt6EApFB9zM2"
@@ -168,7 +162,7 @@
         "\n",
         "Please run the below code to make genomic prediction model!\n",
         "\n",
-        "Below code perform all process to generate model & check accuracy."
+        "Below code perform all process to generate model & check accuracy. And regression model is used to make prediction model."
       ],
       "metadata": {
         "id": "I3fT-bcDWsEx"
@@ -194,9 +188,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Applying genomic prediction model to breeding strategy\n",
-        "\n",
-        "In this section, we try to apply generated models to breeding startegy."
+        "# Applying genomic prediction model to breeding strategy"
       ],
       "metadata": {
         "id": "WAI2X2qTBlre"
@@ -211,7 +203,7 @@
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation18.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
         "\n",
-        "So, in this section, Let's try to construct good genotype for Grain number."
+        "So, in this section, Let's try to construct good genotype for Grain number by generated models."
       ],
       "metadata": {
         "id": "Z6yyI5M3CAQ3"
@@ -220,7 +212,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Make customized genotype & predict phenotype\n",
+        "### Make customized genotype & predict phenotype of customized genotype\n",
         "\n",
         "For example, if we introgressed cutivar X genotype to the Hitomebore cultivar in chromosome 1,\n",
         "how does phenotype change?\n",
@@ -229,7 +221,7 @@
         "\n",
         "We can predict this phenotype by genomic prediction model.\n",
         "\n",
-        "Please run the below code to check phenotype by the genotype !!"
+        "Please run the below code to check phenotype value of this genotype !!"
       ],
       "metadata": {
         "id": "efOCS7T2MG8F"
@@ -251,7 +243,11 @@
       "cell_type": "markdown",
       "source": [
         "### Play with prediction!\n",
-        "Try to find best genotype by editing genotype of chromosomes.\n",
+        "\n",
+        "This program visualizes the genotype that changed the specified chromosome to Cultivar X genotype.\n",
+        "\n",
+        "And predicts phenotype value of this genotype.\n",
+        "\n",
         "You can edit below code & run.\n",
         "\n",
         "ex) \n",
@@ -266,7 +262,9 @@
         "\n",
         "* If you wanna change genotype of chromosome 1, 2, 3, 4, 5, 6, 7\n",
         "\n",
-        "`change_chr = ['chr01', 'chr02', 'chr03', 'chr04', 'chr05', 'chr06', 'chr07']`"
+        "`change_chr = ['chr01', 'chr02', 'chr03', 'chr04', 'chr05', 'chr06', 'chr07']`\n",
+        "\n",
+        "Let's try to find best genotype for Grain number by editing genotype of chromosomes.\n"
       ],
       "metadata": {
         "id": "Zp7LA-q_crpf"
@@ -275,7 +273,7 @@
     {
       "cell_type": "code",
       "source": [
-        "change_chr = ['chr01', 'chr02', 'chr03', 'chr04']\n",
+        "change_chr = ['chr01', 'chr02', 'chr06', 'chr07', 'chr08', 'chr10', 'chr11', 'chr12']\n",
         "predict_customized_genotype(genotype, change_chr, GN_prediction_model)"
       ],
       "metadata": {
@@ -287,7 +285,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This simulation study is editing genotype of chromosome level.\n",
+        "This simulation study edit genotype as chromosome level.\n",
         "\n",
         "But of course, we can also consider regional level/gene level.\n",
         "\n",
