--- a/textbook/GenomicPrediction.ipynb
+++ b/textbook/GenomicPrediction.ipynb
@@ -273,7 +273,7 @@
     {
       "cell_type": "code",
       "source": [
-        "change_chr = ['chr01', 'chr02', 'chr06', 'chr07', 'chr08', 'chr10', 'chr11', 'chr12']\n",
+        "change_chr = ['chr01', 'chr02', 'chr03', 'chr04', 'chr05', 'chr06', 'chr07']\n",
         "predict_customized_genotype(genotype, change_chr, GN_prediction_model)"
       ],
       "metadata": {
