--- a/textbook/GoogleColab.ipynb
+++ b/textbook/GoogleColab.ipynb
@@ -34,9 +34,11 @@
         "* QTL-seq analysis (May 1st)\n",
         "* Genomic Prediction (May 3rd)\n",
         "\n",
-        "To practice these analysis, we plan to use **Google Colaboratory** as a common platform.\n",
+        "To practice these analysis, we have to use some programs and bioinformatics tools.\n",
         "\n",
-        "So, in this session, I'd like to introduce Google Colaboratory and how to use it.\n"
+        "So, we plan to use **Google Colaboratory** as a common platform to run these programs/tools.\n",
+        "\n",
+        "In this session, I'd like to introduce Google Colaboratory and how to use it.\n"
       ]
     },
     {
@@ -48,9 +50,9 @@
         "\n",
         "And Google Colab requires no setup to use and provides free access to computing resources.\n",
         "\n",
-        "You can show, edit, and run the program on the Google server (Colab server).\n",
+        "You can access to Google Colab server through web page and you can show, edit, and run the program on the Google server Colab server.\n",
         "\n",
-        "In other words, you can access to the Google Colab server through web browser such as Google Chrome and run the program there.\n",
+        "In other words, you can run the programs in the Google Colab server through web browser such as Google Chrome.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/colab.png?raw=true\" alt=\"colab\" height=\"200px\">\n",
         "\n",
@@ -139,7 +141,7 @@
         "\n",
         "We call this code region as **code cell**.\n",
         "\n",
-        "The entire code in the code cell will be executed by click \"▶︎\" button.\n",
+        "The entire code in the code cell will be executed by 1 click \"▶︎\" button.\n",
         "\n",
         "For example, the below 3 lines of code calculates cubed number of 0~9."
       ],
@@ -284,11 +286,7 @@
         "initializeTurtle()\n",
         "forward(100)\n",
         "left(90)\n",
-        "forward(100)\n",
-        "left(90)\n",
-        "forward(50)\n",
-        "left(90)\n",
-        "forward(50)"
+        "forward(100)"
       ],
       "metadata": {
         "id": "iRYD0YNM2q6S"
@@ -299,7 +297,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's try to add/remove some movements by editing below code! (We'll take some time.)\n",
+        "Let's try to add/remove some movements by editing below code! And draw nice figure !\n",
+        "\n",
+        "(We'll take some time.)\n",
         "\n",
         "- forward(XX) ... Send the turtle forward XX steps\n",
         "- left(YY) ... Change the direction of the turtle that turns YY degrees left."
@@ -353,7 +353,7 @@
         "\n",
         "In addition, **most Bioinformatics tools are CUI tools** and we have to use commands to invoke Bioinformatics tools.\n",
         "\n",
-        "For example, we woll analyze DNA sequencing data in the practice session.\n",
+        "For example, we will analyze DNA sequencing data in the practice session.\n",
         "\n",
         "Most tools to analyze genome sequencing data is CUI tools.\n",
         "\n",
@@ -366,7 +366,9 @@
         "\n",
         "For example, `seqkit` is the bioinformatics tools to treat sequence data.\n",
         "\n",
-        "When we use `seqkit` in the Google Colab, we should write like this ↓"
+        "But this tool is CUI tool.\n",
+        "\n",
+        "So, when we use `seqkit` in the Google Colab, we should write like this ↓"
       ],
       "metadata": {
         "id": "BeFBT2XB97Ml"
@@ -403,6 +405,8 @@
         "\n",
         "As I mentioned, we access to Google Colab server.\n",
         "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/colab.png?raw=true\" alt=\"colab\" height=\"150px\">\n",
+        "\n",
         "We can check available files & folders in the server from the left folder menu.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/FAO_2024/Colab_05.png?raw=true\" alt=\"title\" height=\"150px\" border=\"1\">\n",
@@ -437,7 +441,7 @@
         "\n",
         "(if not, please try to click update botton).\n",
         "\n",
-        "Then, we will translate this DNA sequence by `seqkit` tools."
+        "Then, we try to translate this DNA sequence by `seqkit` tools."
       ],
       "metadata": {
         "id": "U2P1KjA03BBI"
