--- a/textbook/GoogleColab.ipynb
+++ b/textbook/GoogleColab.ipynb
@@ -366,7 +366,7 @@
         "\n",
         "For example, `seqkit` is the bioinformatics tools to treat sequence data.\n",
         "\n",
-        "But this tool is CUI tool.\n",
+        "But this tool is **CUI tool.**\n",
         "\n",
         "So, when we use `seqkit` in the Google Colab, we should write like this ↓"
       ],
@@ -415,7 +415,7 @@
         "\n",
         "And basically, the output of tools also saved in this folder.\n",
         "\n",
-        "For example, the below code download sample data file of DNA sequence.\n",
+        "For example, the below command download sample data file of DNA sequence.\n",
         "\n"
       ],
       "metadata": {
@@ -462,9 +462,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After running above code, maybe you can find sample_amino_acid.fasta in the left folder.\n",
+        "After running above command, maybe you can find sample_amino_acid.fasta in the left folder.\n",
         "\n",
         "(if not, please try to click update botton).\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/FAO_2024/Colab_08.png?raw=true\" alt=\"title\" height=\"75px\">\n",
         "\n",
         "Like above example, **we can apply Bioinformatics tools to our own dataset.**"
       ],
